--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3"
   }
 }
