--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-responsive-datepicker": "^1.0.6",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
